# ocaml-lattices

./: .ocamlformat  README.md  dune-project  flake.nix  lattices.opam
.github/workflows/: main.yml
src/lib/: dune  flat.ml  flat.mli  interval.ml  interval.mli  map.ml  map.mli  pair.ml  pair.mli  powerset.ml  powerset.mli  sequence.ml  sequence.mli  sig.mli  sign.ml  sign.mli  taint.ml  taint.mli  uniform_product.ml  uniform_product.mli  with_top.ml  with_top.mli
src/test/: dune  flat_test.ml  int_test.ml  interval.ml  lCheck.ml  lcheck_helper.ml  pair.ml  powerset.ml  reverse_powerset.ml  sign.ml  taint.ml  with_top.ml
